[project]
name = "u"
description = "Statically typed units"
authors = [{ name = "Aran-Fey", email = "rawing7@gmail.com" }]
dependencies = ["typing-extensions", "revel>=0.9.0"]
readme = "README.md"
requires-python = ">= 3.9.2"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "u/__init__.py"

[tool.rye]
managed = true
dev-dependencies = ["pytest", "mypy>=1.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["u"]
