[project]
name = "u"
description = "Statically typed units"
authors = [{ name = "Aran-Fey", email = "rawing7@gmail.com" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.9.2"
dependencies = ["typing-extensions"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = ["pytest", "mypy>=1.10.0"]
