[project]
name = "u"
description = "Statically typed units"
authors = [{ name = "Aran-Fey", email = "rawing7@gmail.com" }]
license = "MIT"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["typing-extensions"]

[project.urls]
Repository = "https://github.com/Aran-Fey/u"
Issues = "https://github.com/Aran-Fey/u/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = ["pytest", "mypy>=1.10.0"]
